tests/ui/diagnostic-width/long-E0529.stderr
error[E0529]: expected an array or slice, found `(..., ..., ..., ...)`
  --> $DIR/long-E0529.rs:10:9
   |
LL |     let [] = x;
   |         ^^ pattern cannot match with input type `(..., ..., ..., ...)`
   |
   = note: the full name for the type has been written to '$TEST_BUILD_DIR/long-E0529.long-type-$LONG_TYPE_HASH.txt'
   = note: consider using `--verbose` to print the full type name to the console

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0529`.
